lib/cube/event-expression.js
module.exports = (function(){
  /* Generated by PEG.js 0.6.2 (http://pegjs.majda.cz/). */
  
  var result = {
    /*
     * Parses the input with a generated parser. If the parsing is successfull,
     * returns a value explicitly or implicitly specified by the grammar from
     * which the parser was generated (see |PEG.buildParser|). If the parsing is
     * unsuccessful, throws |PEG.parser.SyntaxError| describing the error.
     */
    parse: function(input, startRule) {
      var parseFunctions = {
        "_": parse__,
        "array_literal": parse_array_literal,
        "character_escape_sequence": parse_character_escape_sequence,
        "digit": parse_digit,
        "digit19": parse_digit19,
        "digits": parse_digits,
        "double_string_char": parse_double_string_char,
        "e": parse_e,
        "escape_character": parse_escape_character,
        "escape_sequence": parse_escape_sequence,
        "event_expression": parse_event_expression,
        "event_filter_expression": parse_event_filter_expression,
        "event_member_expression": parse_event_member_expression,
        "event_value_expression": parse_event_value_expression,
        "exp": parse_exp,
        "filter_operator": parse_filter_operator,
        "frac": parse_frac,
        "hex_digit": parse_hex_digit,
        "hex_escape_sequence": parse_hex_escape_sequence,
        "identifier": parse_identifier,
        "int": parse_int,
        "literal": parse_literal,
        "non_escape_character": parse_non_escape_character,
        "number": parse_number,
        "single_escape_character": parse_single_escape_character,
        "single_string_char": parse_single_string_char,
        "start": parse_start,
        "string": parse_string,
        "type": parse_type,
        "unicode_escape_sequence": parse_unicode_escape_sequence,
        "whitespace": parse_whitespace
      };
      
      if (startRule !== undefined) {
        if (parseFunctions[startRule] === undefined) {
          throw new Error("Invalid rule name: " + quote(startRule) + ".");
        }
      } else {
        startRule = "start";
      }
      
      var pos = 0;
      var reportMatchFailures = true;
      var rightmostMatchFailuresPos = 0;
      var rightmostMatchFailuresExpected = [];
      var cache = {};
      
      function padLeft(input, padding, length) {
        var result = input;
        
        var padLength = length - input.length;
        for (var i = 0; i < padLength; i++) {
          result = padding + result;
        }
        
        return result;
      }
      
      function escape(ch) {
        var charCode = ch.charCodeAt(0);
        
        if (charCode <= 0xFF) {
          var escapeChar = 'x';
          var length = 2;
        } else {
          var escapeChar = 'u';
          var length = 4;
        }
        
        return '\\' + escapeChar + padLeft(charCode.toString(16).toUpperCase(), '0', length);
      }
      
      function quote(s) {
        /*
         * ECMA-262, 5th ed., 7.8.4: All characters may appear literally in a
         * string literal except for the closing quote character, backslash,
         * carriage return, line separator, paragraph separator, and line feed.
         * Any character may appear in the form of an escape sequence.
         */
        return '"' + s
          .replace(/\\/g, '\\\\')            // backslash
          .replace(/"/g, '\\"')              // closing quote character
          .replace(/\r/g, '\\r')             // carriage return
          .replace(/\n/g, '\\n')             // line feed
          .replace(/[\x80-\uFFFF]/g, escape) // non-ASCII characters
          + '"';
      }
      
      function matchFailed(failure) {
        if (pos < rightmostMatchFailuresPos) {
          return;
        }
        
        if (pos > rightmostMatchFailuresPos) {
          rightmostMatchFailuresPos = pos;
          rightmostMatchFailuresExpected = [];
        }
        
        rightmostMatchFailuresExpected.push(failure);
      }
      
      function parse_start() {
        var cacheKey = 'start@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos2 = pos;
        var savedPos3 = pos;
        var result10 = parse__();
        if (result10 !== null) {
          var result11 = parse_event_expression();
          if (result11 !== null) {
            var result12 = parse__();
            if (result12 !== null) {
              if (input.substr(pos, 1) === ":") {
                var result13 = ":";
                pos += 1;
              } else {
                var result13 = null;
                if (reportMatchFailures) {
                  matchFailed("\":\"");
                }
              }
              if (result13 !== null) {
                var result14 = parse__();
                if (result14 !== null) {
                  var result15 = parse_event_expression();
                  if (result15 !== null) {
                    var result16 = parse__();
                    if (result16 !== null) {
                      var result8 = [result10, result11, result12, result13, result14, result15, result16];
                    } else {
                      var result8 = null;
                      pos = savedPos3;
                    }
                  } else {
                    var result8 = null;
                    pos = savedPos3;
                  }
                } else {
                  var result8 = null;
                  pos = savedPos3;
                }
              } else {
                var result8 = null;
                pos = savedPos3;
              }
            } else {
              var result8 = null;
              pos = savedPos3;
            }
          } else {
            var result8 = null;
            pos = savedPos3;
          }
        } else {
          var result8 = null;
          pos = savedPos3;
        }
        var result9 = result8 !== null
          ? (function(expression, lock_expression) {
              var uf = expression.filter;
              expression.type = lock_expression.type;
              expression.filter = function(filter) { uf(filter); lock_expression.filter(filter); }; 
              return expression;
            })(result8[1], result8[5])
          : null;
        if (result9 !== null) {
          var result7 = result9;
        } else {
          var result7 = null;
          pos = savedPos2;
        }
        if (result7 !== null) {
          var result0 = result7;
        } else {
          var savedPos0 = pos;
          var savedPos1 = pos;
          var result4 = parse__();
          if (result4 !== null) {
            var result5 = parse_event_expression();
            if (result5 !== null) {
              var result6 = parse__();
              if (result6 !== null) {
                var result2 = [result4, result5, result6];
              } else {
                var result2 = null;
                pos = savedPos1;
              }
            } else {
              var result2 = null;
              pos = savedPos1;
            }
          } else {
            var result2 = null;
            pos = savedPos1;
          }
          var result3 = result2 !== null
            ? (function(expression) { expression.source = input; return expression; })(result2[1])
            : null;
          if (result3 !== null) {
            var result1 = result3;
          } else {
            var result1 = null;
            pos = savedPos0;
          }
          if (result1 !== null) {
            var result0 = result1;
          } else {
            var result0 = null;;
          };
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_event_expression() {
        var cacheKey = 'event_expression@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var savedPos1 = pos;
        var result3 = parse_event_value_expression();
        if (result3 !== null) {
          var result4 = [];
          var savedPos2 = pos;
          var result6 = parse__();
          if (result6 !== null) {
            if (input.substr(pos, 1) === ".") {
              var result7 = ".";
              pos += 1;
            } else {
              var result7 = null;
              if (reportMatchFailures) {
                matchFailed("\".\"");
              }
            }
            if (result7 !== null) {
              var result8 = parse__();
              if (result8 !== null) {
                var result9 = parse_event_filter_expression();
                if (result9 !== null) {
                  var result5 = [result6, result7, result8, result9];
                } else {
                  var result5 = null;
                  pos = savedPos2;
                }
              } else {
                var result5 = null;
                pos = savedPos2;
              }
            } else {
              var result5 = null;
              pos = savedPos2;
            }
          } else {
            var result5 = null;
            pos = savedPos2;
          }
          while (result5 !== null) {
            result4.push(result5);
            var savedPos2 = pos;
            var result6 = parse__();
            if (result6 !== null) {
              if (input.substr(pos, 1) === ".") {
                var result7 = ".";
                pos += 1;
              } else {
                var result7 = null;
                if (reportMatchFailures) {
                  matchFailed("\".\"");
                }
              }
              if (result7 !== null) {
                var result8 = parse__();
                if (result8 !== null) {
                  var result9 = parse_event_filter_expression();
                  if (result9 !== null) {
                    var result5 = [result6, result7, result8, result9];
                  } else {
                    var result5 = null;
                    pos = savedPos2;
                  }
                } else {
                  var result5 = null;
                  pos = savedPos2;
                }
              } else {
                var result5 = null;
                pos = savedPos2;
              }
            } else {
              var result5 = null;
              pos = savedPos2;
            }
          }
          if (result4 !== null) {
            var result1 = [result3, result4];
          } else {
            var result1 = null;
            pos = savedPos1;
          }
        } else {
          var result1 = null;
          pos = savedPos1;
        }
        var result2 = result1 !== null
          ? (function(value, filters) {
            value.filter = function(filter) {
              var i = -1, n = filters.length;
              while (++i < n) filters[i][3](filter);
              value.exists(filter);
            };
            return value;
          })(result1[0], result1[1])
          : null;
        if (result2 !== null) {
          var result0 = result2;
        } else {
          var result0 = null;
          pos = savedPos0;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_event_filter_expression() {
        var cacheKey = 'event_filter_expression@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var savedPos1 = pos;
        var result3 = parse_filter_operator();
        if (result3 !== null) {
          var result4 = parse__();
          if (result4 !== null) {
            if (input.substr(pos, 1) === "(") {
              var result5 = "(";
              pos += 1;
            } else {
              var result5 = null;
              if (reportMatchFailures) {
                matchFailed("\"(\"");
              }
            }
            if (result5 !== null) {
              var result6 = parse__();
              if (result6 !== null) {
                var result7 = parse_event_member_expression();
                if (result7 !== null) {
                  var result8 = parse__();
                  if (result8 !== null) {
                    if (input.substr(pos, 1) === ",") {
                      var result9 = ",";
                      pos += 1;
                    } else {
                      var result9 = null;
                      if (reportMatchFailures) {
                        matchFailed("\",\"");
                      }
                    }
                    if (result9 !== null) {
                      var result10 = parse__();
                      if (result10 !== null) {
                        var result11 = parse_literal();
                        if (result11 !== null) {
                          var result12 = parse__();
                          if (result12 !== null) {
                            if (input.substr(pos, 1) === ")") {
                              var result13 = ")";
                              pos += 1;
                            } else {
                              var result13 = null;
                              if (reportMatchFailures) {
                                matchFailed("\")\"");
                              }
                            }
                            if (result13 !== null) {
                              var result1 = [result3, result4, result5, result6, result7, result8, result9, result10, result11, result12, result13];
                            } else {
                              var result1 = null;
                              pos = savedPos1;
                            }
                          } else {
                            var result1 = null;
                            pos = savedPos1;
                          }
                        } else {
                          var result1 = null;
                          pos = savedPos1;
                        }
                      } else {
                        var result1 = null;
                        pos = savedPos1;
                      }
                    } else {
                      var result1 = null;
                      pos = savedPos1;
                    }
                  } else {
                    var result1 = null;
                    pos = savedPos1;
                  }
                } else {
                  var result1 = null;
                  pos = savedPos1;
                }
              } else {
                var result1 = null;
                pos = savedPos1;
              }
            } else {
              var result1 = null;
              pos = savedPos1;
            }
          } else {
            var result1 = null;
            pos = savedPos1;
          }
        } else {
          var result1 = null;
          pos = savedPos1;
        }
        var result2 = result1 !== null
          ? (function(op, member, value) { return function(o) { op(o, member.field, value); }; })(result1[0], result1[4], result1[8])
          : null;
        if (result2 !== null) {
          var result0 = result2;
        } else {
          var result0 = null;
          pos = savedPos0;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_event_value_expression() {
        var cacheKey = 'event_value_expression@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos1 = pos;
        var savedPos2 = pos;
        var result7 = parse_type();
        if (result7 !== null) {
          var result8 = parse__();
          if (result8 !== null) {
            if (input.substr(pos, 1) === "(") {
              var result9 = "(";
              pos += 1;
            } else {
              var result9 = null;
              if (reportMatchFailures) {
                matchFailed("\"(\"");
              }
            }
            if (result9 !== null) {
              var result10 = parse__();
              if (result10 !== null) {
                var result11 = parse_event_member_expression();
                if (result11 !== null) {
                  var result12 = [];
                  var savedPos3 = pos;
                  var result16 = parse__();
                  if (result16 !== null) {
                    if (input.substr(pos, 1) === ",") {
                      var result17 = ",";
                      pos += 1;
                    } else {
                      var result17 = null;
                      if (reportMatchFailures) {
                        matchFailed("\",\"");
                      }
                    }
                    if (result17 !== null) {
                      var result18 = parse__();
                      if (result18 !== null) {
                        var result19 = parse_event_member_expression();
                        if (result19 !== null) {
                          var result15 = [result16, result17, result18, result19];
                        } else {
                          var result15 = null;
                          pos = savedPos3;
                        }
                      } else {
                        var result15 = null;
                        pos = savedPos3;
                      }
                    } else {
                      var result15 = null;
                      pos = savedPos3;
                    }
                  } else {
                    var result15 = null;
                    pos = savedPos3;
                  }
                  while (result15 !== null) {
                    result12.push(result15);
                    var savedPos3 = pos;
                    var result16 = parse__();
                    if (result16 !== null) {
                      if (input.substr(pos, 1) === ",") {
                        var result17 = ",";
                        pos += 1;
                      } else {
                        var result17 = null;
                        if (reportMatchFailures) {
                          matchFailed("\",\"");
                        }
                      }
                      if (result17 !== null) {
                        var result18 = parse__();
                        if (result18 !== null) {
                          var result19 = parse_event_member_expression();
                          if (result19 !== null) {
                            var result15 = [result16, result17, result18, result19];
                          } else {
                            var result15 = null;
                            pos = savedPos3;
                          }
                        } else {
                          var result15 = null;
                          pos = savedPos3;
                        }
                      } else {
                        var result15 = null;
                        pos = savedPos3;
                      }
                    } else {
                      var result15 = null;
                      pos = savedPos3;
                    }
                  }
                  if (result12 !== null) {
                    var result13 = parse__();
                    if (result13 !== null) {
                      if (input.substr(pos, 1) === ")") {
                        var result14 = ")";
                        pos += 1;
                      } else {
                        var result14 = null;
                        if (reportMatchFailures) {
                          matchFailed("\")\"");
                        }
                      }
                      if (result14 !== null) {
                        var result5 = [result7, result8, result9, result10, result11, result12, result13, result14];
                      } else {
                        var result5 = null;
                        pos = savedPos2;
                      }
                    } else {
                      var result5 = null;
                      pos = savedPos2;
                    }
                  } else {
                    var result5 = null;
                    pos = savedPos2;
                  }
                } else {
                  var result5 = null;
                  pos = savedPos2;
                }
              } else {
                var result5 = null;
                pos = savedPos2;
              }
            } else {
              var result5 = null;
              pos = savedPos2;
            }
          } else {
            var result5 = null;
            pos = savedPos2;
          }
        } else {
          var result5 = null;
          pos = savedPos2;
        }
        var result6 = result5 !== null
          ? (function(type, head, tail) { return compoundFields(type, head, tail); })(result5[0], result5[4], result5[5])
          : null;
        if (result6 !== null) {
          var result4 = result6;
        } else {
          var result4 = null;
          pos = savedPos1;
        }
        if (result4 !== null) {
          var result0 = result4;
        } else {
          var savedPos0 = pos;
          var result2 = parse_type();
          var result3 = result2 !== null
            ? (function(type) { return {type: type, exists: noop, fields: noop}; })(result2)
            : null;
          if (result3 !== null) {
            var result1 = result3;
          } else {
            var result1 = null;
            pos = savedPos0;
          }
          if (result1 !== null) {
            var result0 = result1;
          } else {
            var result0 = null;;
          };
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_event_member_expression() {
        var cacheKey = 'event_member_expression@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var savedPos1 = pos;
        var result3 = parse_identifier();
        if (result3 !== null) {
          var result4 = [];
          var savedPos4 = pos;
          var savedPos5 = pos;
          var result16 = parse__();
          if (result16 !== null) {
            if (input.substr(pos, 1) === "[") {
              var result17 = "[";
              pos += 1;
            } else {
              var result17 = null;
              if (reportMatchFailures) {
                matchFailed("\"[\"");
              }
            }
            if (result17 !== null) {
              var result18 = parse__();
              if (result18 !== null) {
                var result19 = parse_number();
                if (result19 !== null) {
                  var result20 = parse__();
                  if (result20 !== null) {
                    if (input.substr(pos, 1) === "]") {
                      var result21 = "]";
                      pos += 1;
                    } else {
                      var result21 = null;
                      if (reportMatchFailures) {
                        matchFailed("\"]\"");
                      }
                    }
                    if (result21 !== null) {
                      var result14 = [result16, result17, result18, result19, result20, result21];
                    } else {
                      var result14 = null;
                      pos = savedPos5;
                    }
                  } else {
                    var result14 = null;
                    pos = savedPos5;
                  }
                } else {
                  var result14 = null;
                  pos = savedPos5;
                }
              } else {
                var result14 = null;
                pos = savedPos5;
              }
            } else {
              var result14 = null;
              pos = savedPos5;
            }
          } else {
            var result14 = null;
            pos = savedPos5;
          }
          var result15 = result14 !== null
            ? (function(name) { return arrayAccessor(name); })(result14[3])
            : null;
          if (result15 !== null) {
            var result13 = result15;
          } else {
            var result13 = null;
            pos = savedPos4;
          }
          if (result13 !== null) {
            var result5 = result13;
          } else {
            var savedPos2 = pos;
            var savedPos3 = pos;
            var result9 = parse__();
            if (result9 !== null) {
              if (input.substr(pos, 1) === ".") {
                var result10 = ".";
                pos += 1;
              } else {
                var result10 = null;
                if (reportMatchFailures) {
                  matchFailed("\".\"");
                }
              }
              if (result10 !== null) {
                var result11 = parse__();
                if (result11 !== null) {
                  var result12 = parse_identifier();
                  if (result12 !== null) {
                    var result7 = [result9, result10, result11, result12];
                  } else {
                    var result7 = null;
                    pos = savedPos3;
                  }
                } else {
                  var result7 = null;
                  pos = savedPos3;
                }
              } else {
                var result7 = null;
                pos = savedPos3;
              }
            } else {
              var result7 = null;
              pos = savedPos3;
            }
            var result8 = result7 !== null
              ? (function(name) { return objectAccessor(name); })(result7[3])
              : null;
            if (result8 !== null) {
              var result6 = result8;
            } else {
              var result6 = null;
              pos = savedPos2;
            }
            if (result6 !== null) {
              var result5 = result6;
            } else {
              var result5 = null;;
            };
          }
          while (result5 !== null) {
            result4.push(result5);
            var savedPos4 = pos;
            var savedPos5 = pos;
            var result16 = parse__();
            if (result16 !== null) {
              if (input.substr(pos, 1) === "[") {
                var result17 = "[";
                pos += 1;
              } else {
                var result17 = null;
                if (reportMatchFailures) {
                  matchFailed("\"[\"");
                }
              }
              if (result17 !== null) {
                var result18 = parse__();
                if (result18 !== null) {
                  var result19 = parse_number();
                  if (result19 !== null) {
                    var result20 = parse__();
                    if (result20 !== null) {
                      if (input.substr(pos, 1) === "]") {
                        var result21 = "]";
                        pos += 1;
                      } else {
                        var result21 = null;
                        if (reportMatchFailures) {
                          matchFailed("\"]\"");
                        }
                      }
                      if (result21 !== null) {
                        var result14 = [result16, result17, result18, result19, result20, result21];
                      } else {
                        var result14 = null;
                        pos = savedPos5;
                      }
                    } else {
                      var result14 = null;
                      pos = savedPos5;
                    }
                  } else {
                    var result14 = null;
                    pos = savedPos5;
                  }
                } else {
                  var result14 = null;
                  pos = savedPos5;
                }
              } else {
                var result14 = null;
                pos = savedPos5;
              }
            } else {
              var result14 = null;
              pos = savedPos5;
            }
            var result15 = result14 !== null
              ? (function(name) { return arrayAccessor(name); })(result14[3])
              : null;
            if (result15 !== null) {
              var result13 = result15;
            } else {
              var result13 = null;
              pos = savedPos4;
            }
            if (result13 !== null) {
              var result5 = result13;
            } else {
              var savedPos2 = pos;
              var savedPos3 = pos;
              var result9 = parse__();
              if (result9 !== null) {
                if (input.substr(pos, 1) === ".") {
                  var result10 = ".";
                  pos += 1;
                } else {
                  var result10 = null;
                  if (reportMatchFailures) {
                    matchFailed("\".\"");
                  }
                }
                if (result10 !== null) {
                  var result11 = parse__();
                  if (result11 !== null) {
                    var result12 = parse_identifier();
                    if (result12 !== null) {
                      var result7 = [result9, result10, result11, result12];
                    } else {
                      var result7 = null;
                      pos = savedPos3;
                    }
                  } else {
                    var result7 = null;
                    pos = savedPos3;
                  }
                } else {
                  var result7 = null;
                  pos = savedPos3;
                }
              } else {
                var result7 = null;
                pos = savedPos3;
              }
              var result8 = result7 !== null
                ? (function(name) { return objectAccessor(name); })(result7[3])
                : null;
              if (result8 !== null) {
                var result6 = result8;
              } else {
                var result6 = null;
                pos = savedPos2;
              }
              if (result6 !== null) {
                var result5 = result6;
              } else {
                var result5 = null;;
              };
            }
          }
          if (result4 !== null) {
            var result1 = [result3, result4];
          } else {
            var result1 = null;
            pos = savedPos1;
          }
        } else {
          var result1 = null;
          pos = savedPos1;
        }
        var result2 = result1 !== null
          ? (function(head, tail) { return member(head, tail); })(result1[0], result1[1])
          : null;
        if (result2 !== null) {
          var result0 = result2;
        } else {
          var result0 = null;
          pos = savedPos0;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_filter_operator() {
        var cacheKey = 'filter_operator@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos7 = pos;
        if (input.substr(pos, 2) === "eq") {
          var result23 = "eq";
          pos += 2;
        } else {
          var result23 = null;
          if (reportMatchFailures) {
            matchFailed("\"eq\"");
          }
        }
        var result24 = result23 !== null
          ? (function() { return filterEqual; })()
          : null;
        if (result24 !== null) {
          var result22 = result24;
        } else {
          var result22 = null;
          pos = savedPos7;
        }
        if (result22 !== null) {
          var result0 = result22;
        } else {
          var savedPos6 = pos;
          if (input.substr(pos, 2) === "gt") {
            var result20 = "gt";
            pos += 2;
          } else {
            var result20 = null;
            if (reportMatchFailures) {
              matchFailed("\"gt\"");
            }
          }
          var result21 = result20 !== null
            ? (function() { return filterGreater; })()
            : null;
          if (result21 !== null) {
            var result19 = result21;
          } else {
            var result19 = null;
            pos = savedPos6;
          }
          if (result19 !== null) {
            var result0 = result19;
          } else {
            var savedPos5 = pos;
            if (input.substr(pos, 2) === "ge") {
              var result17 = "ge";
              pos += 2;
            } else {
              var result17 = null;
              if (reportMatchFailures) {
                matchFailed("\"ge\"");
              }
            }
            var result18 = result17 !== null
              ? (function() { return filterGreaterOrEqual; })()
              : null;
            if (result18 !== null) {
              var result16 = result18;
            } else {
              var result16 = null;
              pos = savedPos5;
            }
            if (result16 !== null) {
              var result0 = result16;
            } else {
              var savedPos4 = pos;
              if (input.substr(pos, 2) === "lt") {
                var result14 = "lt";
                pos += 2;
              } else {
                var result14 = null;
                if (reportMatchFailures) {
                  matchFailed("\"lt\"");
                }
              }
              var result15 = result14 !== null
                ? (function() { return filterLess; })()
                : null;
              if (result15 !== null) {
                var result13 = result15;
              } else {
                var result13 = null;
                pos = savedPos4;
              }
              if (result13 !== null) {
                var result0 = result13;
              } else {
                var savedPos3 = pos;
                if (input.substr(pos, 2) === "le") {
                  var result11 = "le";
                  pos += 2;
                } else {
                  var result11 = null;
                  if (reportMatchFailures) {
                    matchFailed("\"le\"");
                  }
                }
                var result12 = result11 !== null
                  ? (function() { return filterLessOrEqual; })()
                  : null;
                if (result12 !== null) {
                  var result10 = result12;
                } else {
                  var result10 = null;
                  pos = savedPos3;
                }
                if (result10 !== null) {
                  var result0 = result10;
                } else {
                  var savedPos2 = pos;
                  if (input.substr(pos, 2) === "ne") {
                    var result8 = "ne";
                    pos += 2;
                  } else {
                    var result8 = null;
                    if (reportMatchFailures) {
                      matchFailed("\"ne\"");
                    }
                  }
                  var result9 = result8 !== null
                    ? (function() { return filterNotEqual; })()
                    : null;
                  if (result9 !== null) {
                    var result7 = result9;
                  } else {
                    var result7 = null;
                    pos = savedPos2;
                  }
                  if (result7 !== null) {
                    var result0 = result7;
                  } else {
                    var savedPos1 = pos;
                    if (input.substr(pos, 2) === "re") {
                      var result5 = "re";
                      pos += 2;
                    } else {
                      var result5 = null;
                      if (reportMatchFailures) {
                        matchFailed("\"re\"");
                      }
                    }
                    var result6 = result5 !== null
                      ? (function() { return filterRegularExpression; })()
                      : null;
                    if (result6 !== null) {
                      var result4 = result6;
                    } else {
                      var result4 = null;
                      pos = savedPos1;
                    }
                    if (result4 !== null) {
                      var result0 = result4;
                    } else {
                      var savedPos0 = pos;
                      if (input.substr(pos, 2) === "in") {
                        var result2 = "in";
                        pos += 2;
                      } else {
                        var result2 = null;
                        if (reportMatchFailures) {
                          matchFailed("\"in\"");
                        }
                      }
                      var result3 = result2 !== null
                        ? (function() { return filterIn; })()
                        : null;
                      if (result3 !== null) {
                        var result1 = result3;
                      } else {
                        var result1 = null;
                        pos = savedPos0;
                      }
                      if (result1 !== null) {
                        var result0 = result1;
                      } else {
                        var result0 = null;;
                      };
                    };
                  };
                };
              };
            };
          };
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_type() {
        var cacheKey = 'type@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var savedPos1 = pos;
        if (input.substr(pos).match(/^[a-z]/) !== null) {
          var result3 = input.charAt(pos);
          pos++;
        } else {
          var result3 = null;
          if (reportMatchFailures) {
            matchFailed("[a-z]");
          }
        }
        if (result3 !== null) {
          if (input.substr(pos).match(/^[a-zA-Z0-9_]/) !== null) {
            var result5 = input.charAt(pos);
            pos++;
          } else {
            var result5 = null;
            if (reportMatchFailures) {
              matchFailed("[a-zA-Z0-9_]");
            }
          }
          if (result5 !== null) {
            var result4 = [];
            while (result5 !== null) {
              result4.push(result5);
              if (input.substr(pos).match(/^[a-zA-Z0-9_]/) !== null) {
                var result5 = input.charAt(pos);
                pos++;
              } else {
                var result5 = null;
                if (reportMatchFailures) {
                  matchFailed("[a-zA-Z0-9_]");
                }
              }
            }
          } else {
            var result4 = null;
          }
          if (result4 !== null) {
            var result1 = [result3, result4];
          } else {
            var result1 = null;
            pos = savedPos1;
          }
        } else {
          var result1 = null;
          pos = savedPos1;
        }
        var result2 = result1 !== null
          ? (function(first, rest) { return first + rest.join(""); })(result1[0], result1[1])
          : null;
        if (result2 !== null) {
          var result0 = result2;
        } else {
          var result0 = null;
          pos = savedPos0;
        }
        
        
        
        cache[cacheKey] = {
